--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,5 @@ jobs:
           publish_branch: master
           publish_dir: _site
           enable_jekyll: true
+          cname: news.xdag.io
 
